# volca

./: Cargo.toml  README.md
.claude/: settings.local.json
midi-test/: Cargo.toml
midi-test/src/: main.rs
volca-manager/: Cargo.toml
volca-manager/src/: audio.rs  main.rs  state.rs  waveform.rs
volca-manager/src/midi/: device.rs  mod.rs
volca-manager/ui/: main.slint
volsa2-core/: Cargo.toml  LICENSE  README.md
volsa2-core/src/: lib.rs
volsa2-core/src/proto/: sample.rs
