[workspace]
members = ["volca-manager", "volsa2-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Shared dependencies across workspace
anyhow = "1.0"
thiserror = "1.0"
arrayref = "0.3"
derive_more = "0.99"
hex-literal = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
smallvec = { version = "1.10", features = ["write"] }
hound = "3.5"
rubato = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
