[package]
name = "volsa2-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol and audio processing library for Volca Sample 2 (derived from volsa2-cli)"
repository = "https://github.com/00nktk/volsa2"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
arrayref.workspace = true
derive_more.workspace = true
hex-literal.workspace = true
bytemuck.workspace = true
smallvec.workspace = true
hound.workspace = true
rubato.workspace = true
tracing.workspace = true

# Not in workspace - specific to audio processing
auto_enums = "0.8.0"
clap = { version = "4.1", features = ["derive"] }
humantime = "2.1.0"
